# robarch24

./: .gitignore  README.md  environment.yml  example.py  example_grasshopper.ghx
data/marker_frames/: markers.json
day1/: schedule.txt
docker/: Dockerfile  my_robot_calibration.yaml
docker/demo/: docker-compose.yml
docker/with_driver/: docker-compose.yml
docs/: CNAME  Gemfile  README.md  _config.yml  conf.py  index.md  index.rst  learning_objectives.md  references.md  results.md  team.md  where.md  workshop_program.md
docs/_includes/: head.html  sidebar.html
docs/reference/: index.rst
linux-setup/: README.md
linux-setup/robarch_ws/: robarch_cheatsheet
linux-setup/robarch_ws/src/robarch_launcher/: CMakeLists.txt  package.xml
linux-setup/robarch_ws/src/robarch_launcher/launch/: core.launch  marker_tracking.launch  robot.launch  ur_marker_tracking.launch  ur_robot_fabrication.launch  workshop_complete.launch
linux-setup/robarch_ws/src/tf_frames_republisher/: CMakeLists.txt  brick_tf_broadcaster.py  brick_tf_rebroadcaster.py  camera_tf_broadcaster.py  package.xml  pose_trigger_dummy.py  publish_frame.launch
rhino/: RobArch_combined_files_240520.ghx  RobArch_combined_files_cleaned.ghx  RobArch_localization_cleaned.ghx  RobArch_mobile_cart_planning.ghx  RobArch_mobile_cart_planning_la.ghx  RobArch_mobile_combined_files.ghx  RobArch_mobile_combined_files_la.ghx  helpers.py
rhino/_archive/: RobArch_marker_tracking.ghx
rhino/json_data/: robarch24_assembly_graph_no_attr.json  robarch24_assembly_graph_with_attr.json  robarch24_joints.json
(+368 files in other folders)
