<?xml version="1.0"?>
<package format="2">
  <name>tf_frames_republisher</name>
  <version>0.0.0</version>
  <description>The tf_frames_republisher package</description>
  <maintainer email="begum.saral@tum.de">afabamc</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
